color bug on mobile and settingsmodal works now

--- a/src/components/Layout/card/Card.css
+++ b/src/components/Layout/card/Card.css
@@ -15,6 +15,6 @@
 
   @media screen and (max-width: 1024px) {
     .content-card {
-      width: 90%;
+      width: 96%;
     }
   }
